--- a/services/user-profile-service/package.json
+++ b/services/user-profile-service/package.json
@@ -4,11 +4,13 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-      "start": "node index.js"
+    "start": "node index.js"
   },
   "dependencies": {
-      "cors": "^2.8.5",
-      "dotenv": "^16.5.0",
-      "express": "^4.21.2"
+    "@aws-sdk/client-dynamodb": "^3.788.0",
+    "@aws-sdk/lib-dynamodb": "^3.788.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^4.21.2"
   }
 }
