--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-amplify/ui-react": "^6.11.1",
+    "aws-amplify": "^6.14.3",
     "aws-sdk": "^2.1692.0",
     "next": "15.3.0",
     "react": "^19.0.0",
