--- a/app/amplify/backend/backend-config.json
+++ b/app/amplify/backend/backend-config.json
@@ -1,6 +1,6 @@
 {
   "auth": {
-    "test7b067a076": {
+    "test7d2204c81": {
       "customAuth": false,
       "dependsOn": [],
       "frontendAuthConfig": {
@@ -26,5 +26,6 @@
       "providerPlugin": "awscloudformation",
       "service": "Cognito"
     }
-  }
+  },
+  "hosting": {}
 }
