--- a/app/amplify/backend/backend-config.json
+++ b/app/amplify/backend/backend-config.json
@@ -1,5 +1,20 @@
 {
-  "api": {},
+  "api": {
+    "assignGroupApi": {
+      "dependsOn": [
+        {
+          "attributes": [
+            "Name",
+            "Arn"
+          ],
+          "category": "function",
+          "resourceName": "assignGroup"
+        }
+      ],
+      "providerPlugin": "awscloudformation",
+      "service": "API Gateway"
+    }
+  },
   "auth": {
     "consultnowdb80faaf": {
       "customAuth": false,
@@ -28,5 +43,29 @@
       "service": "Cognito"
     }
   },
-  "function": {}
+  "function": {
+    "assignGroup": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda"
+    }
+  },
+  "parameters": {
+    "AMPLIFY_function_assignGroup_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "assignGroup"
+        }
+      ]
+    },
+    "AMPLIFY_function_assignGroup_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "assignGroup"
+        }
+      ]
+    }
+  }
 }
